<resources>
    <string name="app_name">Benim Sağlığım</string>
    <string name="home_merhaba">Merhaba,</string>
    <string name="home_hosgeldin">Benim Sağlığım\'a Hoşgeldin.</string>
    <string name="search">Hastalık Arayın</string>

    <string name="home_neyim_var">Neyim Var?</string>
    <string name="home_neyim_var_detail">Kendinizi hasta hissediyorsanız testi doldurun, hastalığınızı öğrenin.</string>

    <string name="hastalik_kategorileri">Hastalık Kategorileri</string>

    <string name="kat_bulasici">Bulaşıcı</string>
    <string name="kat_norolojik">Nörolojik</string>
    <string name="kat_solunum">Solunum</string>
    <string name="kat_mental">Mental</string>
    <string name="kat_ureme">Üreme</string>
    <string name="kat_cinsel">Cinsel</string>
    <string name="kat_sindirim">Sindirim</string>
    <string name="kat_kas">Kas-İskelet</string>

    <string name="home_ilac_tara_ogren">İlaç Tara, Öğren.</string>
    <string name="home_ilac_tara_ogren_detail">Evinizdeki bilmediğiniz ilacı tarayarak ilacınızın ne olduğunu öğrenin.</string>

    <string name="acil">Acil</string>
    <string name="arama">Arama</string>
    <string name="acil_cagri_merk">112 Acil Çağrı Merkezi</string>

    <string name="yakin">Yakın</string>
    <string name="hastaneler">Hastaneler</string>
    <string name="konumunuza_yakin_hastaneler">Konumunuza Yakın Hastaneler</string>

    <string name="en_cok_okunanlar">En Çok Okunanlar</string>

    <!-- Bana Özel Fragment -->
    <string name="bana_ozel">Bana Özel</string>
    <string name="animsaticim">Anımsatıcım</string>
    <string name="animsaticim_aciklama">Artık ilaç veya muayene tarihlerinizi asla kaçırmayacaksınız.</string>
    <string name="kaydettiğim_hastaliklar">Kaydettiğim Hastalıklar</string>

    <!-- Neyim Var? Fragment -->
    <string name="neyimvar">Neyim Var?</string>
    <string name="neyim_var_aciklama">Acil Durumlarda Kullanmayınız.</string>
    <string name="neyim_var_detay">Sonucunuzun doğruluğu garanti edilemez.</string>
    <string name="neyim_var_rcyc_aciklama">Ekranı Kaydırarak Tüm Semptomları Görebilirsiniz.</string>
    <string name="sonuc">Sonucumu Gör</string>


    <!-- Sonuç Ekranı -->
    <string name="dikat">Dikkat!</string>
    <string name="dikkat_aciklama">Sonucunuzun doğruluğu garanti edilemez. Ancak size yol gösterebilir.</string>
    <string name="sonuc_aciklama">Girdiğiniz Etiketler Bu Hastalıklarla Eşleşiyor.</string>
    <string name="mhrs">MHRS\'den Randevu Al.</string>


    <string name="hatirlaticim">Hatırlatıcım</string>
    <string name="hatirlatici_detay">Bildirim hatırlatıcısı oluştur.</string>
    <string name="hatirlatici_baslik">Bildirim Başlığı Giriniz.</string>
    <string name="hatirlatici_aciklama">Bildirim Açıklaması Giriniz.</string>
    <string name="hatirlatici_saat">Kaç Saatte Bir Hatırlatmalı?</string>
    <string name="button_hatirlatici">Oluştur</string>

    <string name="ilac_tara">Nasıl Kullanılır?</string>

    <string name="ilac_tara_aciklama">Fotoğraf Çek veya Medya Yükle</string>
    <string name="ilac_tara_aciklama2">Metin Görünecek Şekilde Özgürce Kırpın</string>
    <string name="ilac_tara_aciklama3">Gönder Butonuna Basarak Sonucu Gör</string>

    <string name="ilac_tara_aciklama_alt">Tamamen güvenlidir verilerinizi paylaşmıyoruz.</string>
    <string name="ilac_tara_aciklama_alt2">İlacın tam adı görünecek şekilde kırpınız.</string>
    <string name="ilac_tara_aciklama_alt2_2">Hastalığın tam adı görünecek şekilde kırpınız.</string>
    <string name="ilac_tara_aciklama_alt3">Saniyeler içerisinde ilacın ne işe yaradığını öğren.</string>

    <string name="ilac_tara_button1">Fotoğraf Çek</string>
    <string name="ilac_tara_button2">Görsel Yükle</string>
    <string name="tedavi_yontem">Tedavi Yöntemi Nasıldır?</string>
    <string name="hakkinda">Hakkında</string>


    <string name="izinn">Bu Özellik İçin İzne İhtiyacımız Var..</string>
    <string name="secilmedi">Görsel Seçilmedi!</string>
    <string name="cekilmedi">Fotoğraf Çekilmedi!</string>
    <string name="ilac_ara">İlaç İsmi Girin!</string>
    <string name="gpt_metin_ornek">Lütfen ilaç ismini girerek tik işaretli butona basın ve cevabınızı bekleyin… 🙂</string>
    <string name="sabir">Biraz sabır 🧘 İlacınızı getiriyoruz ✅</string>
    <string name="bir_sorun_var">Bir sorun var sanırım!</string>
    <string name="semptom_bos">Hiçbir Semptom Seçilmedi ❌</string>

    <string name="bir_sorun_var_sonuc">Girdiğiniz Etiketlerle Alakalı Eşleşen Sonucumuz Yok. Lütfen Etiketleri Doğru Bir Şekilde Girdiğinizden Emin Olun.</string>

    <string name="genelsemp">Ateş,Baş Ağrısı,Baş Dönmesi,Boğaz Ağrısı,Burun Akıntısı,Burun Tıkanıklığı,Gaz,Görme Sorunları,Göz Kızarıklığı,Göğüs Ağrısı,Göğüs Sıkışması,Göğüste Baskı,Halsizlik,Hazımsızlık,Hızlı Nefes Alma,İshal,İştah Kaybı,Karın Ağrısı,Kusma,Mide Bulantısı,Nabız Düşüklüğü,Nabız Yüksekliği,Terleme,Titreme,Uykusuzluk,Yorgunluk,Yüksek Tansiyon,Ödem,Öksürük,Şişlik</string>
    <string name="digersemp">Akne,Ağızda Kaşıntı,Ağızda Kuruluk,Ciltte Döküntü,Ciltte Kuruluk,Ciltte Sararma,Enfeksiyon,Gece Terlemeleri,Göğüste Şişlik, İştahta Artma,Kabarcık,Kanama,Karıncalanma,Kaşıntı,Kilo Kaybı,Korku,Kulak Ağrısı,Kızarıklık,Lenflerde Şişlik,Lezyon,Saç Dökülmesi,Tüylenme,Yan Ağrısı,Yavaş Büyüme,Zayıflık</string>
    <string name="solsemp">Balgam,Gürültülü Horlama,Hapşırma,Hırıltılı Solunum,Hızlı Nefes Alma,Nefes Darlığı,Kanlı Balgam,Öksürük,Yeşil Balgam,Uykuda Solunum Durması</string>
    <string name="norsemp">Asimetrik Sarkma,Bayılma,Çift Görme,Çınlama,Denge Kaybı,El Titremesi,Felç,Göz Kapağı Düşmesi,Gözde Halka,Hareket Bozuklukları,Hareketlerde Yavaşlama,İşitme Sorunları,Koku Kaybı,Kordinasyon Bozukluğu,Metalik Tat,Nöbetler,Tat Kaybı,Vücutta Tek Taraflı Güçsüzlük,Yürüme Güçlüğü,Yüz İfadesinde Azalma,Yüz Kaslarında Zayıflık</string>
    <string name="bilsemp">Anlama Güçlüğü,Anlamsız Sözükler,Bilinen Bilgilere Ulaşmada Zorluk,Bilinç Kaybı,Bilişsel Sorunlar,Dikkat Eksikliği,Duyu Hassasiyeti,Düşünce Hızlanması,Hafıza Kaybı,Hızlı Konuşma,Işık ve Ses Duyarlılığı,Karar Verme Güçlüğü,Konuşma Güçlüğü,Problem Çözmede Güçlük,Yazma Güçlüğü,Zaman ve Mekan Karışıklığı,Zihinsel Bulanıklık,Zihinsel Yeteneklerde Azalma,Zorlayıcı Davranışlar,Zorlayıcı Düşünceler</string>
    <string name="kassemp">Ayak Bileğinde Şişme,Bacaklarda Kas Zayıflığı,Bacaklarda Morluk,Bacaklarda Şişme,Bel Ağrısı,Eklem Ağrıları,Kas Ağrıları,Kas Güçsüzlüğü,Kas Kasılmaları,Kas Krampları,Kas Sertliği,Kollarda Morluk,Osteoporoz</string>
    <string name="bossemp">Bağırsak Sorunları,İdrar Renginde Değişiklik,İdrar Sorunları,İdrarda Azalma,İdrarda Ağrı,İdrarda Kan,İdrarda Yanma,İdrarın Koyulaşması,Kabızlık,Kanlı Dışkı,Karaciğer Sorunları,Karın Krampları,Karın Şişliği,Karında Şişlik,Mide Yanması,Rektal Ağrı,Rektal Kanama,Sarılık,Siyah Dışkı,Sık İdrar,Şişlik,Yutma Güçlüğü</string>
    <string name="gensemp">Adet Düzensizliği,Adet Görememe,Ağrılı Adet,Genital Akıntı,Genital Ağrı,Genital Kaşıntı,Genital Siğil,Genital Yara,İlişkide Ağrı,Kanlı Semen,Kasık Ağrısı,Kısırlık,Rahim Sarkması,Şankır,Testis Ağrısı,Testiste Şişlik,Vajinal Akıntı,Vajinal Kanama</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>













